Updated `Form` by adding `default` config option.

--- a/components/form/editor.html
+++ b/components/form/editor.html
@@ -14,7 +14,7 @@ The form collects only components with defined paths.
 	exports.group = 'Data';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-database-alt';
-	exports.config = { border: false, button: 'SUBMIT', checkvisible: true, autoreset: true, icon: '' };
+	exports.config = { border: false, button: 'SUBMIT', checkvisible: true, autoreset: true, icon: '', default: false };
 	exports.inputs = [{ id: 'load', name: 'Load data', note: '' }, { id: 'reset', name: 'Reset', note: 'Reset form' }, { id: 'clear', name: 'Clear', note: 'Clear form' }];
 	exports.outputs = [{ id: 'submit', name: 'Submit', note: 'Process data' }];
 	exports.render = '/components/form/render.html';
