--- a/components/form/settings.html
+++ b/components/form/settings.html
@@ -3,6 +3,7 @@
 	<hr />
 	<ui-component name="input" path="?.checkvisible" config="type:checkbox">Validate only visible components</ui-component>
 	<ui-component name="input" path="?.autoreset" config="type:checkbox">Reset controls after send</ui-component>
+	<ui-component name="input" path="?.default" config="type:checkbox">Apply default values after the start</ui-component>
 	<hr />
 	<div class="grid-2">
 		<div class="m">
