--- a/components/checkbox/editor.html
+++ b/components/checkbox/editor.html
@@ -1,5 +1,5 @@
 <style>
-	.CLASS_checkbox { height: 28px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; line-height: 28px; color: #a0a0a0; }
+	.CLASS_checkbox { height: 28px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; line-height: 28px; }
 	.CLASS_checkbox i { width: 20px; height: 20px; border-radius: var(--radius); border: 1px solid #E0E0E0; float: left; margin: 4px 7px 0 0; display: block; background-color: #fff; }
 	.CLASS_checkbox.UI_required span { font-weight: bold; }
 </style>
