Fixed default `height` for `Textarea`.

--- a/components/textarea/editor.html
+++ b/components/textarea/editor.html
@@ -13,7 +13,7 @@
 	exports.group = 'Controls';
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-font';
-	exports.config = { required: false };
+	exports.config = { required: false, height: 70 };
 	exports.settings = '/components/textarea/settings.html';
 	exports.render = '/components/textarea/render.html';
 	exports.version = '1';
