Fixed months in `Calendar` render.

--- a/components/calendar/render.html
+++ b/components/calendar/render.html
@@ -62,6 +62,7 @@
 			self.days_short.push(m.substring(0, 2).toUpperCase());
 
 		self.months = W.MONTHS;
+		self.months_short = [];
 
 		for (let m of self.months)
 			self.months_short.push(m.substring(0, 3));
