--- a/components/headline/render.html
+++ b/components/headline/render.html
@@ -1,7 +1,7 @@
 <style>
 	.CLASS div { padding: 0; margin: 0; position: relative; display: inline-block; width: 100%; }
 	.CLASS_h1 { font-size: 30px; font-weight: bold; }
-	.CLASS_h2 { font-size: 26px; font-weight: bold; border-bottom: 1px solid #E0E0E0; padding: 0 0 5px; }
+	.CLASS_h2 { font-size: 26px; font-weight: bold; border-bottom: 1px solid rgba(0,0,0,0.15); padding: 0 0 8px; }
 	.CLASS_h3 { font-size: 22px; font-weight: bold; }
 	.CLASS_h4 { font-size: 16px; font-weight: bold; }
 	.CLASS_right { text-align: right; }
