--- a/components/radiobutton/settings.html
+++ b/components/radiobutton/settings.html
@@ -14,6 +14,7 @@
 	
 	<ui-component name="input" path="?.required" config="type:checkbox" class="b">@(Required)</ui-component>
 	<ui-component name="input" path="?.hidelabel" config="type:checkbox">@(Hide label)</ui-component>
+	<ui-component name="input" path="?.selectfirst" config="type:checkbox">@(Select first radio)</ui-component>
 
 	<hr />
 
