--- a/components/callout/editor.html
+++ b/components/callout/editor.html
@@ -27,27 +27,15 @@
 			element.html(template(config));
 		};
 
-		render();
-
 		element.on('dblclick', '.text', function(e) {
-
 			e.stopPropagation();
 			e.preventDefault();
-
-			var el = $(this);
-			var opt = {};
-
-			instance.edit(el, opt, function(response) {
-				config.html = response.html;
-			});
-
+			instance.edit($(this), {});
 		});
 
 		element.on('click', 'a', function(e) {
 			e.preventDefault();
-			UIBuilder.emit('link', this, function() {
-				config.html = element.find('.text').html();
-			});
+			UIBuilder.emit('link', this);
 		});
 
 		element.on('click', '.icon', function(e) {
@@ -57,24 +45,15 @@
 		});
 
 		element.find('.text').on('click', '.ti', function(e) {
+			UIBuilder.emit(e.ctrlKey || e.metaKey ? 'attr' : 'icon', this);
+		});
 
-			if (e.ctrlKey || e.metaKey) {
-				UIBuilder.emit('attr', this, function() {
-					config.html = element.find('.text').html();
-				});
-				return;
-			}
-
-			UIBuilder.emit('icon', this, function(el, val) {
-				if (!val)
-					el.remove();
-				config.html = element.find('.text').html();
-			});
-
+		instance.on('html', function() {
+			config.html = element.find('.text').html();
 		});
 
 		instance.on('configure', render);
-
+		render();
 	};
 
 </script>
