--- a/components/checkbox/settings.html
+++ b/components/checkbox/settings.html
@@ -1,4 +1,6 @@
 <div class="padding">
 	<ui-component name="input" path="?.required" config="type:checkbox" class="b">Required</ui-component>
 	<ui-component name="input" path="?.reverse" config="type:checkbox">Reverse value</ui-component>
+	<hr />
+	<ui-component name="input" path="?.default" config="type:checkbox">Default value</ui-component>
 </div>
