--- a/components/textbox/render.html
+++ b/components/textbox/render.html
@@ -4,8 +4,8 @@
 	.CLASS_error { display: none; color: red; font-weight: bold; margin-top: 8px; font-size: 11px; line-height: 13px; }
 
 	.CLASS_input { position: relative; height: 38px; line-height: 36px; border: 1px solid #D0D0D0; border-radius: var(--radius); background: #FFF; cursor: pointer; }
-	.CLASS_input input { border: 0; background: transparent; height: 36px; width: 100%; outline: 0; padding: 0 8px; }
-	.CLASS_input .CLASS_ricon { float: right; border-left: 1px solid #e0e0e0; height: 36px; width: 34px; text-align: center; line-height: 36px; padding: 12px 0 0; }
+	.CLASS_input input { border: 0; background: transparent; height: 36px; width: 100%; outline: 0; padding: 0 8px; font-size: 13px; }
+	.CLASS_input .CLASS_ricon { float: right; border-left: 1px solid #E0E0E0; height: 36px; width: 34px; text-align: center; line-height: 36px; padding: 12px 0 0; }
 	.CLASS_input .CLASS_ricon i { display: block; cursor: pointer; }
 	.CLASS_number .CLASS_ricon { padding: 7px 0 0; }
 	.CLASS_number .CLASS_ricon i { font-size: 12px; }
