--- a/components/checkbox/render.html
+++ b/components/checkbox/render.html
@@ -1,5 +1,5 @@
 <style>
-	.CLASS label { font-size: 12px; margin-bottom: 3px; display: block; outline: 0; }
+	.CLASS label { font-size: 13px; margin-bottom: 3px; display: block; outline: 0; }
 	.CLASS label i { margin-right: 5px; }
 	.CLASS_checkbox * { cursor: pointer; }
 	.CLASS_checkbox span { width: 20px; height: 20px; line-height: 19px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
@@ -49,7 +49,7 @@
 		};
 
 		instance.default = function() {
-			return false;
+			return config.default;
 		};
 
 		instance.on('reset', function() {
