--- a/components/datatransformer/render.html
+++ b/components/datatransformer/render.html
@@ -4,15 +4,14 @@
 
 	exports.make = function(instance, config) {
 		instance.state.notify = true;
+		instance.state.bind = true;
 		instance.on('ready', function() {
-
 			var fn = config.value ? new Function('value', config.value) : null;
-
 			instance.on('notify', function(value) {
 				if (fn) {
 					var val = fn(value);
 					if (val != undefined)
-						instance.set('value', val);
+						instance.set('value', val, 'nobind');
 				}
 			});
 
