--- a/components/dataview/editor.html
+++ b/components/dataview/editor.html
@@ -6,7 +6,7 @@
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-database';
 	exports.version = '1';
-	exports.config = { name: 'Name', interval: 0, id: '', read: '', query: '' };
+	exports.config = { name: 'Name', model: '', interval: 0, id: '', read: '', query: '' };
 	exports.render = 'auto';
 	exports.settings = 'auto';
 	exports.follow = true;
