--- a/components/dataview/settings.html
+++ b/components/dataview/settings.html
@@ -1,19 +1,22 @@
 <div class="padding">
 
 	<div class="grid-2">
-		<ui-bind path="?.path" config="enabled" class="block m">
-			<ui-component name="input" path="?.query" config="placeholder:id,name">@(Query arguments from the model)</ui-component>
-			<div class="help">@(Query arguments will be loaded according to the selected path)</div>
+		<div class="m">
+			<ui-component name="input" path="?.model" config="dirsource:#paths;dirempty:@(Empty)">@(Data model)</ui-component>
+		</div>
+		<ui-bind path="?.model" config="enabled" class="m block">
+			<ui-component name="input" path="?.query" config="placeholder:id,name">@(Query arguments from the data model)</ui-component>
 		</ui-bind>
-		<div class="grid-2">
-			<div class="m">
-				<ui-component name="input" path="?.interval" config="type:number;min:0;format:">@(Interval)</ui-component>
-				<div class="help"><i class="ti ti-chess-clock-alt"></i>@(It must be defined in seconds)</div>
-			</div>
-			<div class="m">
-				<ui-component name="input" path="?.read" config="placeholder:Enter a key/property name">@(Read value from incoming data)</ui-component>
-				<div class="help"><i class="ti ti-exchange"></i>@(You can a specific key only)</div>
-			</div>
+	</div>
+
+	<div class="grid-3">
+		<div class="m">
+			<ui-component name="input" path="?.interval" config="type:number;min:0;format:">@(Interval)</ui-component>
+			<div class="help"><i class="ti ti-chess-clock-alt"></i>@(It must be defined in seconds)</div>
+		</div>
+		<div class="m">
+			<ui-component name="input" path="?.read" config="placeholder:Enter a key/property name">@(Read value from incoming data)</ui-component>
+			<div class="help"><i class="ti ti-exchange"></i>@(You can a specific key only)</div>
 		</div>
 	</div>
 
