--- a/components/dataview/render.html
+++ b/components/dataview/render.html
@@ -2,8 +2,6 @@
 	exports.id = 'dataview';
 	exports.make = function(instance, config, element) {
 
-		instance.state.notify = true;
-
 		var interval = null;
 		var query = {};
 		var querykeys = config.query ? config.query.split(',').trim() : null;
@@ -36,10 +34,13 @@
 		};
 
 		instance.on('destroy', function() {
-			interval && clearTimeout(interval);
+			if (interval) {
+				clearTimeout(interval);
+				interval = null;
+			}
 		});
 
-		instance.on('notify', function(value) {
+		config.model && instance.watch(config.model, function(value) {
 
 			if (!value || typeof(value) !== 'object')
 				return;
@@ -54,7 +55,7 @@
 			request();
 		});
 
-		if (!config.path)
+		if (!config.model)
 			instance.on('ready', request);
 	};
 </script>
