--- a/components/applayout/editor.html
+++ b/components/applayout/editor.html
@@ -40,6 +40,7 @@
 	exports.settings = 'auto';
 	exports.hidden = true;
 	exports.version = '1';
+	exports.config = { margin: 120 };
 	exports.outputs = [{ id: 'button', name: 'On button' }];
 
 	exports.make = function(instance, config, element, cls) {
