--- a/components/dropdown/render.html
+++ b/components/dropdown/render.html
@@ -1,14 +1,14 @@
 <style>
-	.CLASS label { font-size: 12px; margin-bottom: 2px; display: block; outline: 0; }
+	.CLASS label { font-size: 12px; margin-bottom: 5px; display: block; outline: 0; }
 	.CLASS label i { margin-right: 5px; }
 	.CLASS_error { display: none; color: red; font-weight: bold; margin-top: 8px; font-size: 11px; line-height: 13px; }
 
-	.CLASS_dropdown { position: relative; height: 38px; line-height: 36px; border: 1px solid #D0D0D0; border-radius: var(--radius); background: #FFF; cursor: pointer; }
-	.CLASS_dropdown .CLASS_value { margin-right: 40px; border: 0; background: transparent; height: 36px; width: 100%; outline: 0; padding: 0 8px; }
+	.CLASS_dropdown { position: relative; height: 38px; border: 1px solid #D0D0D0; border-radius: var(--radius); background: #FFF; cursor: pointer; }
+	.CLASS_dropdown .CLASS_value { margin-right: 40px; border: 0; background: transparent; height: 36px; line-height: 36px; width: 100%; outline: 0; padding: 0 8px; font-size: 13px; }
 	.CLASS_dropdown .CLASS_icon { float: right; border-left: 1px solid #e0e0e0; height: 36px; width: 34px; text-align: center; line-height: 36px; padding: 12px 0 0; }
 	.CLASS_dropdown .CLASS_icon i { display: block; cursor: pointer; }
 
-	.CLASS_placeholder { position: absolute; font-size: 12px; pointer-events: none; color: gray; margin: 0; width: 100%; text-align: left; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding-left: 8px; }
+	.CLASS_placeholder { position: absolute; font-size: 13px; pointer-events: none; color: gray; margin: 0; width: 100%; text-align: left; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding-left: 8px; line-height: 36px; }
 
 	.CLASS.UI_touched.UI_invalid .CLASS_dropdown { border-color: red; }
 	.CLASS.UI_touched.UI_invalid .CLASS_error { display: block; }
