--- a/components/flowinput/settings.html
+++ b/components/flowinput/settings.html
@@ -1,5 +1,5 @@
 <div class="padding">
 	<div class="m">
-		<ui-component name="input" path="?.target" config="dirsource:#inputs;multiple:true;required:1;placeholder:Choose inputs">Target</ui-component>
+		<ui-component name="input" path="?.target" config="dirsource:#inputs;multiple:true;placeholder:Choose inputs">Resend data</ui-component>
 	</div>
 </div>
