--- a/components/textarea/render.html
+++ b/components/textarea/render.html
@@ -4,9 +4,9 @@
 	.CLASS .error { color: red; font-weight: bold; display: none; margin-top: 8px; font-size: 11px; line-height: 13px; }
 
 	.CLASS_multiline { position: relative; padding: 6px 8px 0; border: 1px solid #d0d0d0; border-radius: var(--radius); background-color: #fff; }
-	.CLASS_multiline textarea { resize: none; border: 0; outline: 0; background: transparent !important; width: 100%; margin: 0; padding: 0; line-height: 16px; }
+	.CLASS_multiline textarea { resize: none; border: 0; outline: 0; background: transparent !important; width: 100%; margin: 0; padding: 0; line-height: 16px; font-size: 13px; }
 	.CLASS_multiline textarea::-webkit-scrollbar { display: none; }
-	.CLASS_placeholder { position: absolute; font-size: 12px; pointer-events: none; color: gray; margin: 0; width: 100%; text-align: left; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+	.CLASS_placeholder { position: absolute; font-size: 13px; pointer-events: none; color: gray; margin: 0; width: 100%; text-align: left; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; line-height: 16px; }
 	.CLASS_resize textarea { resize: vertical !important; }
 
 	/* STATES */
