--- a/components/checkboxlist/editor.html
+++ b/components/checkboxlist/editor.html
@@ -5,13 +5,13 @@
 	.CLASS.UI_required label:before { content: '*'; color: red; margin-right: 5px; }
 	.CLASS_settings .ui-listform-item .item { padding: 7px 10px; }
 
-	.CLASS figure span { width: 20px; height: 20px; line-height: 19px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
-	.CLASS figure div { line-height: 22px; font-size: 12px; margin-bottom: 3px; display: block; outline: 0; margin-left: 30px; margin-bottom: 5px; }
+	.CLASS figure span { width: 20px; height: 20px; line-height: 18px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
+	.CLASS figure div { line-height: 22px; font-size: 13px; display: block; outline: 0; margin-bottom: 5px; }
 	.CLASS figure span i { display: none; font-weight: bold; }
 </style>
 
 <body>
-	{{ if !hidelabel }}<label class="label">{{ if icon }}<i class="{{ icon }} mr5"></i>{{ fi }}{{ name }}</label>{{ fi }}
+	{{ if !hidelabel }}<label class="label">{{ if icon }}<i class="{{ icon }} mr5"></i>{{ fi }}{{ name }}:</label>{{ fi }}
 	
 	{{ if items && items.length }}
 		{{ foreach m in items }}
