--- a/components/checkboxlist/render.html
+++ b/components/checkboxlist/render.html
@@ -3,8 +3,8 @@
 	.CLASS label i { margin-right: 5px; }
 
 	.CLASS figure * { cursor: pointer; }
-	.CLASS figure div { line-height: 22px; font-size: 12px; margin-bottom: 3px; display: block; outline: 0; margin-left: 30px; margin-bottom: 5px; }
-	.CLASS figure span { width: 20px; height: 20px; line-height: 17px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
+	.CLASS figure div { line-height: 22px; font-size: 13px; display: block; outline: 0; margin-bottom: 5px; }
+	.CLASS figure span { width: 20px; height: 20px; line-height: 18px; font-size: 11px; margin: 0 7px 0 0; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: var(--radius); background: #fff; }
 	.CLASS figure span i { display: none; font-weight: bold; }
 	.CLASS figure.UI_checked span { background-color: var(--color); border-color: var(--color); }
 	.CLASS figure.UI_checked span i { display: inline-block; color: #fff; }
