--- a/components/radiobutton/editor.html
+++ b/components/radiobutton/editor.html
@@ -4,13 +4,13 @@
 	.CLASS_settings .ui-listform-item .item { padding: 7px 10px; }
 	.CLASS.UI_required label { font-weight: bold; }
 	.CLASS.UI_required label:before { content: '*'; color: red; margin-right: 5px; }
-	.CLASS figure span { width: 20px; height: 20px; line-height: 18px; font-size: 10px; margin: 0 7px 0 0; transition: background-color .2s, border-color .2s; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: 50%; background: #fff; }
-	.CLASS figure div { line-height: 20px; font-size: 12px; margin-bottom: 5px; display: block; outline: 0; }
+	.CLASS figure span { width: 20px; height: 20px; line-height: 18px; font-size: 11px; margin: 0 7px 0 0; transition: background-color .2s, border-color .2s; text-align: center; float: left; border: 1px solid #d0d0d0; border-radius: 50%; background: #fff; }
+	.CLASS figure div { line-height: 20px; font-size: 13px; margin-bottom: 5px; display: block; outline: 0; }
 	.CLASS figure span i { display: none; font-weight: bold; font-size: 10px; color: #fff; }
 </style>
 
 <body>
-	{{ if !hidelabel }}<label class="label">{{ if icon }}<i class="{{ icon }} mr5"></i>{{ fi }}{{ name }}</label>{{ fi }}
+	{{ if !hidelabel }}<label class="label">{{ if icon }}<i class="{{ icon }} mr5"></i>{{ fi }}{{ name }}:</label>{{ fi }}
 
 	{{ if items && items.length }}
 		{{ foreach m in items }}
