--- a/components/hiddenvalue/settings.html
+++ b/components/hiddenvalue/settings.html
@@ -1,6 +1,6 @@
 <div class="padding">
 	<div class="m">
-		<ui-component name="input" path="?.fixed" config="type:checkbox">Enable readonly fixed value</ui-component>
+		<ui-component name="input" path="?.fixed" config="type:checkbox">Enable readonly fixed value defined below</ui-component>
 	</div>
 	<div class="grid-3">
 		<div class="m">
